--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                 <a href="https://bisagading69.com">
                     <button class="sidebar-menu"><i class="fas fa-bars"></i></button>
                 </a>
-                <amp-img class="weblogo" src="https://i.ibb.co.com/hc7trsK/logoking403.png" alt="Gading69" width="64" height="64" layout="intrinsic"></amp-img>
+                <amp-img class="weblogo" src="https://i.ibb.co.com/jMzN0zS/KING403-1.png" alt="Gading69" width="64" height="64" layout="intrinsic"></amp-img>
             </div>
             <div class="button-header">
                 <div class="login-head-button">
