--- a/index.html
+++ b/index.html
@@ -729,21 +729,21 @@
                 <hr>
                 <div class="container">
                     <div>
-                        <h1>Gading69 Agen Live Casino Bandar Bola Online dan Judi Online</h1>
+                        <h1>KING403 Agen Live Casino Bandar Bola Online dan Judi Online</h1>
                         <h2>Gading69 | Agen Live Casino | Judi Bola Online | Bandar Togel | Situs Judi Poker Online | DominoQQ Terpercaya</h2>
                         <h3>
-                            Gading69 adalah Situs Agen Bola SBOBET terpercaya untuk permainan Judi Taruhan Bola SBOBET, Poker, berbagai macam Live Casino, Bandar Togel Serta Judi Slot Online Games Online dengan menggunakan uang asli. Segera daftarkan diri Anda.
+                            KING403 adalah Situs Agen Bola SBOBET terpercaya untuk permainan Judi Taruhan Bola SBOBET, Poker, berbagai macam Live Casino, Bandar Togel Serta Judi Slot Online Games Online dengan menggunakan uang asli. Segera daftarkan diri Anda.
                         </h3>
                         <h2>Situs Live Casino Online Android &amp; iOS</h2>
                         <h3>
-                            Semua Permainan di Gading69 bisa Anda mainkan baik di PC, smartphone Android dan iOS Anda. Sehingga Anda bisa bermain dimanapun dan kapanpun tanpa takut Anda tidak bisa login. Cukup login di website Agen Live Casino Gading69, masukkan
+                            Semua Permainan di KING403 bisa Anda mainkan baik di PC, smartphone Android dan iOS Anda. Sehingga Anda bisa bermain dimanapun dan kapanpun tanpa takut Anda tidak bisa login. Cukup login di website Agen Live Casino KING403, masukkan
                             user ID dan password anda , maka anda sudah siap bermain.
                         </h3>
                     </div>
                 </div>
                 <hr>
                 <div class="copyright-style">
-                    &#169 Gading69
+                    &#169 KING403
                 </div>
             </div>
         </div>
