--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                 <a href="https://t.ly/king403">
                     <button class="sidebar-menu"><i class="fas fa-bars"></i></button>
                 </a>
-                <amp-img class="weblogo" src="https://i.ibb.co.com/jMzN0zS/KING403-1.png" alt="Gading69" width="64" height="64" layout="intrinsic"></amp-img>
+                <amp-img class="weblogo" src="https://i.ibb.co.com/jMzN0zS/KING403-1.png" alt="KING403" width="64" height="64" layout="intrinsic"></amp-img>
             </div>
             <div class="button-header">
                 <div class="login-head-button">
@@ -538,7 +538,7 @@
                                 <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_eb4c51ed51de44f28da018db602d5c5e.jpg" width="2" height="1" layout="responsive" alt="GADING-3.jpg"></amp-img>
                             </a>
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_552a875e31c84f6888351b4200cfe644.jpg" width="2" height="1" layout="responsive" alt="GADING69-1017X582.jpg"></amp-img>
+                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_552a875e31c84f6888351b4200cfe644.jpg" width="2" height="1" layout="responsive" alt="KING403-1017X582.jpg"></amp-img>
                             </a>
                         </amp-carousel>
                     </div>
