--- a/index.html
+++ b/index.html
@@ -523,22 +523,19 @@
                                 <amp-img src="https://sgalabel.blob.core.windows.net/websites/medialibrary/images/6ba82d99f9da4a5a869bcbf96e9fe5e1.jpg" width="2" height="1" layout="responsive" alt="imgpsh_fullsize_anim.jpg"></amp-img>
                             </a>
                                                     <a href="https://t.ly/king403">
-                                <amp-img src="https://i.ibb.co.com/3BZVVpD/BONUS-AJAK-TEMAN.jpg" width="2" height="1" layout="responsive" alt="GADING-1.jpg"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/NThwDqf/SELAMAT-BERGABUNG.jpg" width="2" height="1" layout="responsive" alt="GADING-1.jpg"></amp-img>
                             </a>
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_1381935499914f47a686472d3adf4d77.jpg" width="2" height="1" layout="responsive" alt="1017X582C 1.jpg"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/25g24Bt/QRIS.jpg" alt="QRIS" width="2" height="1" layout="responsive" alt="1017X582C 1.jpg"></amp-img>
                             </a>
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_c3d2f56462cd4577a86c4174b124d45c.jpg" width="2" height="1" layout="responsive" alt="GADING-2.jpg"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/ydnfPst/KOTAK-MISTERI.jpg" width="2" height="1" layout="responsive" alt="GADING-2.jpg"></amp-img>
                             </a>
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_9e8e4ec304ec4a0db298793b7e41dc1a.jpg" width="2" height="1" layout="responsive" alt="qrisgading.jpg"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/3BZVVpD/BONUS-AJAK-TEMAN.jpg" width="2" height="1" layout="responsive" alt="qrisgading.jpg"></amp-img>
                             </a>
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_eb4c51ed51de44f28da018db602d5c5e.jpg" width="2" height="1" layout="responsive" alt="GADING-3.jpg"></amp-img>
-                            </a>
-                            <a href="https://t.ly/king403">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_552a875e31c84f6888351b4200cfe644.jpg" width="2" height="1" layout="responsive" alt="GADING69-1017X582.jpg"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/tQfjsN2/PULSA.jpg" alt="PULSA" width="2" height="1" layout="responsive" alt="GADING-3.jpg"></amp-img>
                             </a>
                         </amp-carousel>
                     </div>
