--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
             </div>
             <div class="button-header">
                 <div class="login-head-button">
-                    <a href="https://t.ly/king403">
+                    <a href="https://t.ly/vvipx">
                         <p>Daftar Disini</p>
                     </a>
                 </div>
