--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <head>
             <meta charset="utf-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="canonical" href="https://t.ly/king403" />
+            <link rel="canonical" href="https://king403-resmi.vercel.app/" />
 
 
 
@@ -499,7 +499,7 @@
                 <a href="https://t.ly/king403">
                     <button class="sidebar-menu"><i class="fas fa-bars"></i></button>
                 </a>
-                <amp-img class="weblogo" src="https://i.ibb.co.com/jMzN0zS/KING403-1.png" alt="Gading69" width="64" height="64" layout="intrinsic"></amp-img>
+                <amp-img class="weblogo" src="https://i.ibb.co.com/jMzN0zS/KING403-1.png" alt="KING403" width="64" height="64" layout="intrinsic"></amp-img>
             </div>
             <div class="button-header">
                 <div class="login-head-button">
