--- a/index.html
+++ b/index.html
@@ -573,55 +573,55 @@
                         <div class="menu-icon">
                             <a href="https://t.ly/king403">
                                 <div class="icon-item">
-                                    <amp-img src="https://sgacdn.azureedge.net/agent-websites/website/Themes/Moonspace/Mobile/Contents/Images/Darkyellow/MainMenu/ic_slot.png" width="1" height="1" layout="responsive" alt="SLOTS"></amp-img>
+                                    <amp-img src="/" width="1" height="1" layout="responsive" alt="SLOTS"></amp-img>
                                     <p>SLOTS</p>
                                 </div>
                             </a>
                             <a href="https://t.ly/king403">
                                 <div class="icon-item">
-                                    <amp-img src="https://sgacdn.azureedge.net/agent-websites/website/Themes/Moonspace/Mobile/Contents/Images/Darkyellow/MainMenu/ic_casino.png" width="1" height="1" layout="responsive" alt="LIVECASINO"></amp-img>
+                                    <amp-img src="/" width="1" height="1" layout="responsive" alt="LIVECASINO"></amp-img>
                                     <p>LIVECASINO</p>
                                 </div>
                             </a>
                             <a href="https://t.ly/king403">
                                 <div class="icon-item">
-                                    <amp-img src="https://sgacdn.azureedge.net/agent-websites/website/Themes/Moonspace/Mobile/Contents/Images/Darkyellow/MainMenu/ic_sport.png" width="1" height="1" layout="responsive" alt="SPORTS"></amp-img>
+                                    <amp-img src="/" width="1" height="1" layout="responsive" alt="SPORTS"></amp-img>
                                     <p>SPORTS</p>
                                 </div>
                             </a>
                             <a href="https://t.ly/king403">
                                 <div class="icon-item">
-                                    <amp-img src="https://sgacdn.azureedge.net/agent-websites/website/Themes/Moonspace/Mobile/Contents/Images/Darkyellow/MainMenu/ic_fishing.png" width="1" height="1" layout="responsive" alt="FISHING"></amp-img>
+                                    <amp-img src="/" width="1" height="1" layout="responsive" alt="FISHING"></amp-img>
                                     <p>FISHING</p>
                                 </div>
                             </a>
                             <a href="https://t.ly/king403">
                                 <div class="icon-item">
-                                    <amp-img src="https://sgacdn.azureedge.net/agent-websites/website/Themes/Moonspace/Mobile/Contents/Images/Darkyellow/MainMenu/ic_gaming.png" width="1" height="1" layout="responsive" alt="E-Kasino"></amp-img>
+                                    <amp-img src="/" width="1" height="1" layout="responsive" alt="E-Kasino"></amp-img>
                                     <p>E-Kasino</p>
                                 </div>
                             </a>
                             <a href="https://t.ly/king403">
                                 <div class="icon-item">
-                                    <amp-img src="https://sgacdn.azureedge.net/agent-websites/website/Themes/Moonspace/Mobile/Contents/Images/Darkyellow/MainMenu/ic_other.png" width="1" height="1" layout="responsive" alt="GAMES"></amp-img>
+                                    <amp-img src="/" width="1" height="1" layout="responsive" alt="GAMES"></amp-img>
                                     <p>GAMES</p>
                                 </div>
                             </a>
                             <a href="https://t.ly/king403">
                                 <div class="icon-item">
-                                    <amp-img src="https://sgacdn.azureedge.net/agent-websites/website/Themes/Moonspace/Mobile/Contents/Images/Darkyellow/MainMenu/ic_esports.png" width="1" height="1" layout="responsive" alt="E-SPORTS"></amp-img>
+                                    <amp-img src="/" width="1" height="1" layout="responsive" alt="E-SPORTS"></amp-img>
                                     <p>E-SPORTS</p>
                                 </div>
                             </a>
                             <a href="https://t.ly/king403">
                                 <div class="icon-item">
-                                    <amp-img src="https://sgacdn.azureedge.net/agent-websites/website/Themes/Moonspace/Mobile/Contents/Images/Darkyellow/MainMenu/ic_lotto.png" width="1" height="1" layout="responsive" alt="TOGEL"></amp-img>
+                                    <amp-img src="/" width="1" height="1" layout="responsive" alt="TOGEL"></amp-img>
                                     <p>TOGEL</p>
                                 </div>
                             </a>
                             <a href="https://t.ly/king403">
                                 <div class="icon-item">
-                                    <amp-img src="https://sgacdn.azureedge.net/agent-websites/website/Themes/Moonspace/Mobile/Contents/Images/Darkyellow/MainMenu/ic_promo.png" width="1" height="1" layout="responsive" alt="Promosi"></amp-img>
+                                    <amp-img src="/" width="1" height="1" layout="responsive" alt="Promosi"></amp-img>
                                     <p>Promosi</p>
                                 </div>
                             </a>
