--- a/index.html
+++ b/index.html
@@ -520,19 +520,19 @@
                     <div class="container-slider">
                         <amp-carousel width="2" height="1" layout="responsive" type="slides" role="region" autoplay delay="2000">
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://i.ibb.co.com/NThwDqf/SELAMAT-BERGABUNG.jpg" width="2" height="1" layout="responsive" alt="GADING-1.jpg"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/NThwDqf/SELAMAT-BERGABUNG.jpg" width="2" height="1" layout="responsive" alt="KING403-1.jpg"></amp-img>
                             </a>
                             <a href="https://t.ly/king403">
                                 <amp-img src="https://i.ibb.co.com/25g24Bt/QRIS.jpg" alt="QRIS" width="2" height="1" layout="responsive" alt="1017X582C 1.jpg"></amp-img>
                             </a>
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://i.ibb.co.com/ydnfPst/KOTAK-MISTERI.jpg" width="2" height="1" layout="responsive" alt="GADING-2.jpg"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/ydnfPst/KOTAK-MISTERI.jpg" width="2" height="1" layout="responsive" alt="KING403-2.jpg"></amp-img>
                             </a>
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://i.ibb.co.com/3BZVVpD/BONUS-AJAK-TEMAN.jpg" width="2" height="1" layout="responsive" alt="qrisgading.jpg"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/3BZVVpD/BONUS-AJAK-TEMAN.jpg" width="2" height="1" layout="responsive" alt="KING403.jpg"></amp-img>
                             </a>
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://i.ibb.co.com/tQfjsN2/PULSA.jpg" alt="PULSA" width="2" height="1" layout="responsive" alt="GADING-3.jpg"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/tQfjsN2/PULSA.jpg" alt="PULSA" width="2" height="1" layout="responsive" alt="KING403-3.jpg"></amp-img>
                             </a>
                         </amp-carousel>
                     </div>
