--- a/index.html
+++ b/index.html
@@ -520,19 +520,19 @@
                     <div class="container-slider">
                         <amp-carousel width="2" height="1" layout="responsive" type="slides" role="region" autoplay delay="2000">
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://i.ibb.co.com/NThwDqf/SELAMAT-BERGABUNG.jpg" width="2" height="1" layout="responsive" alt="KING403-1.jpg"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/NThwDqf/SELAMAT-BERGABUNG.jpg" width="2" height="1" layout="responsive" alt="SELAMAT-BERGABUNG.jpg"></amp-img>
                             </a>
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://i.ibb.co.com/25g24Bt/QRIS.jpg" alt="QRIS" width="2" height="1" layout="responsive" alt="1017X582C 1.jpg"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/25g24Bt/QRIS.jpg" alt="QRIS" width="2" height="1" layout="responsive" alt="QRIS.jpg"></amp-img>
                             </a>
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://i.ibb.co.com/ydnfPst/KOTAK-MISTERI.jpg" width="2" height="1" layout="responsive" alt="KING403-2.jpg"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/ydnfPst/KOTAK-MISTERI.jpg" width="2" height="1" layout="responsive" alt="KOTAK-MISTERI.jpg"></amp-img>
                             </a>
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://i.ibb.co.com/3BZVVpD/BONUS-AJAK-TEMAN.jpg" width="2" height="1" layout="responsive" alt="KING403.jpg"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/3BZVVpD/BONUS-AJAK-TEMAN.jpg" width="2" height="1" layout="responsive" alt="BONUS-AJAK-TEMAN.jpg"></amp-img>
                             </a>
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://i.ibb.co.com/tQfjsN2/PULSA.jpg" alt="PULSA" width="2" height="1" layout="responsive" alt="KING403-3.jpg"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/tQfjsN2/PULSA.jpg" alt="PULSA" width="2" height="1" layout="responsive" alt="PULSA.jpg"></amp-img>
                             </a>
                         </amp-carousel>
                     </div>
@@ -643,7 +643,7 @@
                         </a>
                         <a href="https://t.ly/king403">
                             <div class="game">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/website/Themes/Moonspace/Mobile/Contents/Images/Darkyellow/Provider/ic_sga.png" width="1" height="1" layout="responsive" alt="SGA Gates of Olympus"></amp-img>
+                                <amp-img src="/" width="1" height="1" layout="responsive" alt="SGA Gates of Olympus"></amp-img>
                             </div>
                         </a>
                         <a href="https://t.ly/king403">
@@ -653,12 +653,12 @@
                         </a>
                         <a href="https://t.ly/king403">
                             <div class="game">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/website/Themes/Moonspace/Mobile/Contents/Images/Darkyellow/Provider/ic_sga.png" width="1" height="1" layout="responsive" alt="Gates of Olympus 1000"></amp-img>
+                                <amp-img src="/" width="1" height="1" layout="responsive" alt="Gates of Olympus 1000"></amp-img>
                             </div>
                         </a>
                         <a href="https://t.ly/king403">
                             <div class="game">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/website/Themes/Moonspace/Mobile/Contents/Images/Darkyellow/Provider/ic_sga.png" width="1" height="1" layout="responsive" alt="Sweet Bonanza 1000"></amp-img>
+                                <amp-img src="/" width="1" height="1" layout="responsive" alt="Sweet Bonanza 1000"></amp-img>
                             </div>
                         </a>
                         <a href="https://t.ly/king403">
@@ -693,7 +693,7 @@
                         </a>
                         <a href="https://t.ly/king403">
                             <div class="game">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/website/Themes/Moonspace/Mobile/Contents/Images/Darkyellow/Provider/ic_sga.png" width="1" height="1" layout="responsive" alt="Mahjong Wins 2"></amp-img>
+                                <amp-img src="/" width="1" height="1" layout="responsive" alt="Mahjong Wins 2"></amp-img>
                             </div>
                         </a>
                         <a href="https://t.ly/king403">
@@ -713,7 +713,7 @@
                         </a>
                         <a href="https://t.ly/king403">
                             <div class="game">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/website/Themes/Moonspace/Mobile/Contents/Images/Darkyellow/Provider/ic_sga.png" width="1" height="1" layout="responsive" alt="SBOBET"></amp-img>
+                                <amp-img src="/" width="1" height="1" layout="responsive" alt="SBOBET"></amp-img>
                             </div>
                         </a>
                     </div>
