--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                 <a href="https://t.ly/king403">
                     <button class="sidebar-menu"><i class="fas fa-bars"></i></button>
                 </a>
-                <amp-img class="weblogo" src="https://i.ibb.co.com/jMzN0zS/KING403-1.png" alt="KING403" width="64" height="64" layout="intrinsic"></amp-img>
+                <amp-img class="weblogo" src="/" alt="KING403" width="64" height="64" layout="intrinsic"></amp-img>
             </div>
             <div class="button-header">
                 <div class="login-head-button">
@@ -520,19 +520,19 @@
                     <div class="container-slider">
                         <amp-carousel width="2" height="1" layout="responsive" type="slides" role="region" autoplay delay="2000">
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://i.ibb.co.com/NThwDqf/SELAMAT-BERGABUNG.jpg" width="2" height="1" layout="responsive" alt="SELAMAT-BERGABUNG.jpg"></amp-img>
+                                <amp-img src="/" width="2" height="1" layout="responsive" alt="SELAMAT-BERGABUNG.jpg"></amp-img>
                             </a>
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://i.ibb.co.com/25g24Bt/QRIS.jpg" alt="QRIS" width="2" height="1" layout="responsive" alt="QRIS.jpg"></amp-img>
+                                <amp-img src="/" alt="QRIS" width="2" height="1" layout="responsive" alt="QRIS.jpg"></amp-img>
                             </a>
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://i.ibb.co.com/ydnfPst/KOTAK-MISTERI.jpg" width="2" height="1" layout="responsive" alt="KOTAK-MISTERI.jpg"></amp-img>
+                                <amp-img src="/" width="2" height="1" layout="responsive" alt="KOTAK-MISTERI.jpg"></amp-img>
                             </a>
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://i.ibb.co.com/3BZVVpD/BONUS-AJAK-TEMAN.jpg" width="2" height="1" layout="responsive" alt="BONUS-AJAK-TEMAN.jpg"></amp-img>
+                                <amp-img src="/" width="2" height="1" layout="responsive" alt="BONUS-AJAK-TEMAN.jpg"></amp-img>
                             </a>
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://i.ibb.co.com/tQfjsN2/PULSA.jpg" alt="PULSA" width="2" height="1" layout="responsive" alt="PULSA.jpg"></amp-img>
+                                <amp-img src="/" alt="PULSA" width="2" height="1" layout="responsive" alt="PULSA.jpg"></amp-img>
                             </a>
                         </amp-carousel>
                     </div>
