--- a/index.html
+++ b/index.html
@@ -520,22 +520,22 @@
                     <div class="container-slider">
                         <amp-carousel width="2" height="1" layout="responsive" type="slides" role="region" autoplay delay="2000">
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_1444f5aa51d94d218191d897df4eab5d.jpg" width="2" height="1" layout="responsive" alt="GADING-1.jpg"></amp-img>
+                                <amp-img src="https://sgalabel.blob.core.windows.net/websites/medialibrary/images/6ba82d99f9da4a5a869bcbf96e9fe5e1.jpg" width="2" height="1" layout="responsive" alt="imgpsh_fullsize_anim.jpg"></amp-img>
+                            </a>
+                                                    <a href="https://t.ly/king403">
+                                <amp-img src="https://i.ibb.co.com/T0QDzt7/king403-1.jpg" width="2" height="1" layout="responsive" alt="king403-1.jpg"></amp-img>
                             </a>
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_1381935499914f47a686472d3adf4d77.jpg" width="2" height="1" layout="responsive" alt="1017X582C 1.jpg"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/Yd7mPB7/king403-2.jpg" width="2" height="1" layout="responsive" alt="king403-2.jpg"></amp-img>
                             </a>
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_c3d2f56462cd4577a86c4174b124d45c.jpg" width="2" height="1" layout="responsive" alt="GADING-2.jpg"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/9h3xpdp/king403-3.jpg" width="2" height="1" layout="responsive" alt="king403-3.jpg"></amp-img>
                             </a>
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_9e8e4ec304ec4a0db298793b7e41dc1a.jpg" width="2" height="1" layout="responsive" alt="qrisgading.jpg"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/7WR4CHZ/king403-4.jpg" width="2" height="1" layout="responsive" alt="king403-4.jpg"></amp-img>
                             </a>
                             <a href="https://t.ly/king403">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_eb4c51ed51de44f28da018db602d5c5e.jpg" width="2" height="1" layout="responsive" alt="GADING-3.jpg"></amp-img>
-                            </a>
-                            <a href="https://t.ly/king403">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_552a875e31c84f6888351b4200cfe644.jpg" width="2" height="1" layout="responsive" alt="GADING69-1017X582.jpg"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/YjLRhZJ/king403-5.jpg" width="2" height="1" layout="responsive" alt="king403-5.jpg"></amp-img>
                             </a>
                         </amp-carousel>
                     </div>
@@ -543,7 +543,7 @@
                         <div class="container">
                             <div class="row button-group">
                                 <div>
-                                    <a href="https://t.ly/king403">
+                                    <a href="https://t.ly/king403https://t.ly/king403">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                                             <path d="M2.0625 17.7143C2.0625 18.4254 2.5373 19 3.125 19H8.4375V12.5714H2.0625V17.7143ZM10.5625 19H15.875C16.4627 19 16.9375 18.4254 16.9375 17.7143V12.5714H10.5625V19ZM16.9375 6.14286H15.5396C15.7455 5.6567 15.875 5.1183 15.875 4.53571C15.875 2.58705 14.5635 1 12.9531 1C11.5719 1 10.6787 1.8558 9.5332 3.7442C8.3877 1.8558 7.49453 1 6.11328 1C4.50293 1 3.19141 2.58705 3.19141 4.53571C3.19141 5.1183 3.31758 5.6567 3.52676 6.14286H2.0625C1.4748 6.14286 1 6.71741 1 7.42857V10.6429C1 10.9964 1.23906 11.2857 1.53125 11.2857H17.4688C17.7609 11.2857 18 10.9964 18 10.6429V7.42857C18 6.71741 17.5252 6.14286 16.9375 6.14286ZM6.10996 6.14286C5.37617 6.14286 4.78184 5.42366 4.78184 4.53571C4.78184 3.64777 5.37617 2.92857 6.10996 2.92857C6.7707 2.92857 7.25879 3.06116 8.96875 6.14286H6.10996ZM12.9531 6.14286H10.0943C11.801 3.0692 12.2758 2.92857 12.9531 2.92857C13.6869 2.92857 14.2812 3.64777 14.2812 4.53571C14.2812 5.42366 13.6869 6.14286 12.9531 6.14286Z" fill="white" />
                                         </svg>
