--- a/index.html
+++ b/index.html
@@ -633,42 +633,42 @@
                     <div>
                         <a href="https://t.ly/king403">
                             <div class="game">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_b493735d01874da08e8f9e4480c5137d.png" width="1" height="1" layout="responsive" alt="Mahjong Ways"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/qNw8fk2/pragmatic.jpg" width="1" height="1" layout="responsive" alt="pragmatic"></amp-img>
                             </div>
                         </a>
                         <a href="https://t.ly/king403">
                             <div class="game">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_12c7870ef1044406adea7fef5ecc63df.png" width="1" height="1" layout="responsive" alt="Mahjong Ways 2"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/gSVHXNK/pgsoft.jpg" width="1" height="1" layout="responsive" alt="pgsoft"></amp-img>
                             </div>
                         </a>
                         <a href="https://t.ly/king403">
                             <div class="game">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/website/Themes/Moonspace/Mobile/Contents/Images/Darkyellow/Provider/ic_sga.png" width="1" height="1" layout="responsive" alt="SGA Gates of Olympus"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/bLdxWjB/nolimitcity" width="1" height="1" layout="responsive" alt="nolimitcity"></amp-img>
                             </div>
                         </a>
                         <a href="https://t.ly/king403">
                             <div class="game">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_beeb3274b284489d8d31372d69b45c1c.png" width="1" height="1" layout="responsive" alt="Gates of Olympus"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/rsZpx3W/habanero.jpg" width="1" height="1" layout="responsive" alt="habanero"></amp-img>
                             </div>
                         </a>
                         <a href="https://t.ly/king403">
                             <div class="game">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/website/Themes/Moonspace/Mobile/Contents/Images/Darkyellow/Provider/ic_sga.png" width="1" height="1" layout="responsive" alt="Gates of Olympus 1000"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/MMKsRzX/netent.jpg" width="1" height="1" layout="responsive" alt="netent"></amp-img>
                             </div>
                         </a>
                         <a href="https://t.ly/king403">
                             <div class="game">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/website/Themes/Moonspace/Mobile/Contents/Images/Darkyellow/Provider/ic_sga.png" width="1" height="1" layout="responsive" alt="Sweet Bonanza 1000"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/pKrkKMr/cq9.jpg" width="1" height="1" layout="responsive" alt="cq9"></amp-img>
                             </div>
                         </a>
                         <a href="https://t.ly/king403">
                             <div class="game">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_9f8ff5e2831b423ca99abacb18d4b23c.png" width="1" height="1" layout="responsive" alt="Starlight Princess 1000"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/C6JQqbq/spadegaming.jpg" width="1" height="1" layout="responsive" alt="spadegaming"></amp-img>
                             </div>
                         </a>
                         <a href="https://t.ly/king403">
                             <div class="game">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_1bba970e4d6c48febba3614fea0a057d.png" width="1" height="1" layout="responsive" alt="Lucky Neko"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/8xvYD0W/playtech.jpg" width="1" height="1" layout="responsive" alt="playtech"></amp-img>
                             </div>
                         </a>
                         <a href="https://t.ly/king403">
