--- a/index.html
+++ b/index.html
@@ -643,11 +643,6 @@
                         </a>
                         <a href="https://t.ly/king403">
                             <div class="game">
-                                <amp-img src="https://i.ibb.co.com/bLdxWjB/nolimitcity" width="1" height="1" layout="responsive" alt="nolimitcity"></amp-img>
-                            </div>
-                        </a>
-                        <a href="https://t.ly/king403">
-                            <div class="game">
                                 <amp-img src="https://i.ibb.co.com/rsZpx3W/habanero.jpg" width="1" height="1" layout="responsive" alt="habanero"></amp-img>
                             </div>
                         </a>
@@ -673,47 +668,7 @@
                         </a>
                         <a href="https://t.ly/king403">
                             <div class="game">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_40eb8961abf74297b4f93aabf009eb56.png" width="1" height="1" layout="responsive" alt="Starlight Princess"></amp-img>
-                            </div>
-                        </a>
-                        <a href="https://t.ly/king403">
-                            <div class="game">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_393ce8cbe3ed476c88d4eaedc2ee42ca.png" width="1" height="1" layout="responsive" alt="Sweet Bonanza"></amp-img>
-                            </div>
-                        </a>
-                        <a href="https://t.ly/king403">
-                            <div class="game">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_87115251d1ae4399aa0f96cf43f13d75.png" width="1" height="1" layout="responsive" alt="Wild Bounty Showdown"></amp-img>
-                            </div>
-                        </a>
-                        <a href="https://t.ly/king403">
-                            <div class="game">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_4a4bc6f6bf834f07b58d81c75b08cb95.png" width="1" height="1" layout="responsive" alt="Gates of Gatot Kaca"></amp-img>
-                            </div>
-                        </a>
-                        <a href="https://t.ly/king403">
-                            <div class="game">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/website/Themes/Moonspace/Mobile/Contents/Images/Darkyellow/Provider/ic_sga.png" width="1" height="1" layout="responsive" alt="Mahjong Wins 2"></amp-img>
-                            </div>
-                        </a>
-                        <a href="https://t.ly/king403">
-                            <div class="game">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_60505eeb9f464a8eb1debaf9649fd3ae.png" width="1" height="1" layout="responsive" alt="Sweet Bonanza Xmas"></amp-img>
-                            </div>
-                        </a>
-                        <a href="https://t.ly/king403">
-                            <div class="game">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_cd0658d21a39428c84c8544b34d1771a.png" width="1" height="1" layout="responsive" alt="Wild Bandito"></amp-img>
-                            </div>
-                        </a>
-                        <a href="https://t.ly/king403">
-                            <div class="game">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/163/medialibrary/images/163_5c28477a1530473c89774a509454c3ef.png" width="1" height="1" layout="responsive" alt="Ways of the Qilin"></amp-img>
-                            </div>
-                        </a>
-                        <a href="https://t.ly/king403">
-                            <div class="game">
-                                <amp-img src="https://sgacdn.azureedge.net/agent-websites/website/Themes/Moonspace/Mobile/Contents/Images/Darkyellow/Provider/ic_sga.png" width="1" height="1" layout="responsive" alt="SBOBET"></amp-img>
+                                <amp-img src="https://i.ibb.co.com/bLdxWjB/nolimitcity.jpg" width="1" height="1" layout="responsive" alt="nolimitcity"></amp-img>
                             </div>
                         </a>
                     </div>
