--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
             <div class="button-header">
                 <div class="login-head-button">
                     <a href="https://t.ly/vvipx">
-                        <p>Daftar Disini</p>
+                        <p>Daftar</p>
                     </a>
                 </div>
                 <div class="login-head-button">
