--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
                         <div class="menu-icon">
                             <a href="https://t.ly/king403">
                                 <div class="icon-item">
-                                    <amp-img src="/" width="1" height="1" layout="responsive" alt="SLOTS"></amp-img>
+                                    <amp-img src="/img/ic_slot.png" width="1" height="1" layout="responsive" alt="SLOTS"></amp-img>
                                     <p>SLOTS</p>
                                 </div>
                             </a>
