--- a/index.html
+++ b/index.html
@@ -580,49 +580,49 @@
                             </a>
                             <a href="https://t.ly/king403">
                                 <div class="icon-item">
-                                    <amp-img src="/" width="1" height="1" layout="responsive" alt="LIVECASINO"></amp-img>
+                                    <amp-img src="/img/ic_casino.png" width="1" height="1" layout="responsive" alt="LIVECASINO"></amp-img>
                                     <p>LIVECASINO</p>
                                 </div>
                             </a>
                             <a href="https://t.ly/king403">
                                 <div class="icon-item">
-                                    <amp-img src="/" width="1" height="1" layout="responsive" alt="SPORTS"></amp-img>
+                                    <amp-img src="/img/ic_sport.png" width="1" height="1" layout="responsive" alt="SPORTS"></amp-img>
                                     <p>SPORTS</p>
                                 </div>
                             </a>
                             <a href="https://t.ly/king403">
                                 <div class="icon-item">
-                                    <amp-img src="/" width="1" height="1" layout="responsive" alt="FISHING"></amp-img>
+                                    <amp-img src="/img/ic_fishing.png" width="1" height="1" layout="responsive" alt="FISHING"></amp-img>
                                     <p>FISHING</p>
                                 </div>
                             </a>
                             <a href="https://t.ly/king403">
                                 <div class="icon-item">
-                                    <amp-img src="/" width="1" height="1" layout="responsive" alt="E-Kasino"></amp-img>
+                                    <amp-img src="/img/ic_gaming.png" width="1" height="1" layout="responsive" alt="E-Kasino"></amp-img>
                                     <p>E-Kasino</p>
                                 </div>
                             </a>
                             <a href="https://t.ly/king403">
                                 <div class="icon-item">
-                                    <amp-img src="/" width="1" height="1" layout="responsive" alt="GAMES"></amp-img>
+                                    <amp-img src="/img/ic_other.png" width="1" height="1" layout="responsive" alt="GAMES"></amp-img>
                                     <p>GAMES</p>
                                 </div>
                             </a>
                             <a href="https://t.ly/king403">
                                 <div class="icon-item">
-                                    <amp-img src="/" width="1" height="1" layout="responsive" alt="E-SPORTS"></amp-img>
+                                    <amp-img src="/img/ic_esport.png" width="1" height="1" layout="responsive" alt="E-SPORTS"></amp-img>
                                     <p>E-SPORTS</p>
                                 </div>
                             </a>
                             <a href="https://t.ly/king403">
                                 <div class="icon-item">
-                                    <amp-img src="/" width="1" height="1" layout="responsive" alt="TOGEL"></amp-img>
+                                    <amp-img src="/img/ic_lotto.png" width="1" height="1" layout="responsive" alt="TOGEL"></amp-img>
                                     <p>TOGEL</p>
                                 </div>
                             </a>
                             <a href="https://t.ly/king403">
                                 <div class="icon-item">
-                                    <amp-img src="/" width="1" height="1" layout="responsive" alt="Promosi"></amp-img>
+                                    <amp-img src="/img/ic_promo.png" width="1" height="1" layout="responsive" alt="Promosi"></amp-img>
                                     <p>Promosi</p>
                                 </div>
                             </a>
