--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                             </a>
                             <a href="https://t.ly/king403">
                                 <div class="icon-item">
-                                    <amp-img src="/img/ic_esport.png" width="1" height="1" layout="responsive" alt="E-SPORTS"></amp-img>
+                                    <amp-img src="/img/ic_esports.png" width="1" height="1" layout="responsive" alt="E-SPORTS"></amp-img>
                                     <p>E-SPORTS</p>
                                 </div>
                             </a>
