--- a/index.html
+++ b/index.html
@@ -7,8 +7,30 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="canonical" href="https://king403-resmi.tumblr.com/" />
 
-
-
+        <meta property="og:image:width" content="600">
+        <meta property="og:image:height" content="466">
+        <meta name="og:url" content="https://king403-resmi.vercel.app/">
+        <meta name="og:site_name" content="KING403">
+        <meta name="og:locale" content="ID_id">
+        <meta name="og:video" content="https://youtu.be/">
+        <meta name="og:type" content="website">
+        <meta property="og:type" content="video" />
+        <meta property="og:video:type" content="video/mp4">
+        <meta property="og:video:width" content="500">
+    <meta property="og:video:height" content="281">
+    <meta name="theme-color" content="#0a0a0a" />
+    <meta name="categories" content="KING403" />
+    <meta name="language" content="ID">
+    <meta name="rating" content="general">
+    <meta name="copyright" content="KING403">
+    <meta name="author" content="KING403">
+    <meta name="distribution" content="global">
+    <meta name="publisher" content="KING403">
+    <meta name="geo.placename" content="DKI Jakarta">
+    <meta name="geo.country" content="ID">
+    <meta name="geo.region" content="ID" />
+    <meta name="tgn.nation" content="Indonesia">
+<link rel="icon" href="https://sgalabel.blob.core.windows.net/agent-websites/238/medialibrary/images/238_4bb05c9609224ca1bf9aae8bcb09bc3a.png">
 
             
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" type="text/css" />
