--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
         <meta property="og:type" content="video" />
         <meta property="og:video:type" content="video/mp4">
         <meta property="og:video:width" content="500">
-        <meta property="og:video:height" content="281">
-        <meta name="theme-color" content="#0a0a0a" />
-        <meta name="categories" content="KING403" />
-        <meta name="language" content="ID">
-        <meta name="rating" content="general">
-        <meta name="copyright" content="KING403">
-        <meta name="author" content="KING403">
-        <meta name="distribution" content="global">
-        <meta name="publisher" content="KING403">
-        <meta name="geo.placename" content="DKI Jakarta">
-        <meta name="geo.country" content="ID">
-        <meta name="geo.region" content="ID" />
-        <meta name="tgn.nation" content="Indonesia">
-        <link rel="icon" href="https://sgalabel.blob.core.windows.net/agent-websites/238/medialibrary/images/238_4bb05c9609224ca1bf9aae8bcb09bc3a.png">
+    <meta property="og:video:height" content="281">
+    <meta name="theme-color" content="#0a0a0a" />
+    <meta name="categories" content="KING403" />
+    <meta name="language" content="ID">
+    <meta name="rating" content="general">
+    <meta name="copyright" content="KING403">
+    <meta name="author" content="KING403">
+    <meta name="distribution" content="global">
+    <meta name="publisher" content="KING403">
+    <meta name="geo.placename" content="DKI Jakarta">
+    <meta name="geo.country" content="ID">
+    <meta name="geo.region" content="ID" />
+    <meta name="tgn.nation" content="Indonesia">
+<link rel="icon" href="https://sgalabel.blob.core.windows.net/agent-websites/238/medialibrary/images/238_4bb05c9609224ca1bf9aae8bcb09bc3a.png">
 
             
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" type="text/css" />
@@ -349,7 +349,7 @@
             border-top: 2px solid #333842;
             border-bottom: 1px solid #333842;
             background: #212632;
-            left: 0;
+            left: 20px;
             right: 0;
             bottom: 0;
             display: flex;
